--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,9 @@
-<h1>Blocipedia</h1>
-<p>A place to make your own wiki pages!</p>
+<br>
+<div class="jumbotron">
+	<h1>Blocipedia</h1>
+	<p>A place to make your own wiki pages!</p>
+	<p>
+		<%= link_to "Sign In", new_user_session_path, class: 'btn btn-primary' %> or
+		<%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %> today!
+	</p>
+</div>
