--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,8 @@
 <ul class="nav nav-tabs">
 	<li><%= link_to "Home", welcome_index_path %></li>
 	<li><%= link_to "About", welcome_about_path %></li>
+  <li><%= link_to "Wikis", wikis_path %></li>
+
 
 	<div class="pull-right user-info">
 	  <% if current_user %>
