--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -1,6 +1,8 @@
 <h1>All Wikis</h1>
 
-<%= link_to "New Wiki", new_wiki_path, class: 'btn btn-success' %>
+<% if policy(Wiki.new).create? %>
+	<%= link_to "New Wiki", new_wiki_path, class: 'btn btn-success' %>
+<% end %>
 
 <ul>
 	<% @wikis.all.each do |wiki| %>
