finished upgrade and downgrade

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -31,6 +31,14 @@
     <%= f.submit "Update" %>
   </div>
 <% end %>
+<h3>Account Status</h3>
+<% if current_user.role == "standard" %>
+  <h4>Standard User</h4>
+  <%= link_to "Upgrade Account", new_charge_path, class: 'btn btn-success' %>
+<% elsif current_user.role == "premium" %>
+  <h4>Premium User</h4>
+  <%= link_to "Downgrade Account", charges_path, class: 'btn btn-success' %>
+<% end %>
 
 <h3>Cancel my account</h3>
 
