--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,12 +12,14 @@
 <ul class="nav nav-tabs">
 	<li><%= link_to "Home", welcome_index_path %></li>
 	<li><%= link_to "About", welcome_about_path %></li>
-  <li><%= link_to "Wikis", wikis_path %></li>
+  <li><%= link_to "Wikis", wikis_path %></li>  
 
 
 	<div class="pull-right user-info">
 	  <% if current_user %>
-	    Hello <%= link_to current_user.email %>! <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
+	    Hello <%= link_to (current_user.name || current_user.email), current_user %>! 
+      <%= link_to "Edit User Info", edit_user_registration_path %>
+      <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
 	  <% else %>
 	    <%= link_to "Sign In", new_user_session_path %> or 
 	    <%= link_to "Sign Up", new_user_registration_path %>
