--- a/app/views/wikis/_form.html.erb
+++ b/app/views/wikis/_form.html.erb
@@ -1,7 +1,24 @@
-<% if current_user.role == 'admin' || current_user.role == 'premium' %>
-	<div class="form-group">
-	  <%= f.label :private, class: 'checkbox' do %>
-	  <%= f.checkbox :private %> Private Wiki
+<div class="row">
+  <div class="col-md-8">
+  <%= form_for @wiki do |f| %>
+  	<div class="form-group">
+     <%= f.label :title %>
+     <%= f.text_field :title, class: 'form-control', placeholer: "Enter wiki title" %>
+    </div>
+    <div class="form-group">
+    	<%= f.label :body %>
+    	<%= f.text_area :body, rows: 8, class: 'form-control', placeholer: "Enter wiki body" %>
+    </div>
+	<% if current_user.role == 'admin' || current_user.role == 'premium' %>
+		<div class="form-group">
+	  		<%= f.label :private, class: 'checkbox' do %>
+	  		<%= f.check_box :private %> Private Wiki
+		<% end %>
+		</div>
 	<% end %>
-	</div>
-<% end %>
+	<div class="form-group">
+    	<%= f.submit "Save", class: 'btn btn-success' %>
+    </div>
+  <% end %>
+</div>
+
