--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -1,11 +1,11 @@
 <% if policy(@wiki).show? %>
-	<h1><%= @wiki.title %></h1>
+	<h1><%= markdown_to_html @wiki.title %></h1>
 
 	<% if policy(@wiki).edit? %>
 		<%= link_to "Edit", edit_wiki_path(@wiki), class: 'btn btn-success' %>
 	<% end %>
 
-	<p><%= @wiki.body %></p>
+	<p><%= markdown_to_html @wiki.body %></p>
 
 	<% if policy(@wiki).destroy? %>
 	<%= link_to "Delete Wiki", @wiki, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this wiki?' } %> 
