--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -11,3 +11,18 @@
 	<%= link_to "Delete Wiki", @wiki, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this wiki?' } %> 
 	<% end %>
 <% end %>
+
+<% if current_user.role == 'admin' || current_user.role == 'premium' %>
+	<%= form_for Collaborator.new do |f| %>
+
+		<%= f.collection_select :user_id, User.all, :id, :email %>
+		<%= f.hidden_field :wiki_id, value: @wiki.id %>
+
+		<%= f.submit %>
+	<% end %>
+
+	<% @wiki.collaborators.each do |collab| %>
+		<%= link_to "Delete Collaborator: #{collab.user.email}", collab, method: :delete, class: 'btn btn-danger' %>
+	<% end %>
+<% end %>
+
